fix(polls): Don't let poll question and option text overflow

--- a/css/_polls.scss
+++ b/css/_polls.scss
@@ -249,6 +249,7 @@ a.poll-detail-link, a.poll-change-vote-link {
     border-width: thin;
     border-style: solid;
     border-color: #616161;
+    word-break: break-word;
 }
 
 .poll-create-label {
